--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
       <img width=" 252px"src="images/solarsystem.jpg" alt=" Image Desriction">
-    <h1>Solar System</h1>
+    <h1>Solar System by Lavith Sharma</h1>
     The Solar System is the gravitationally bound system of the Sun and the objects that orbit it, either directly or indirectly. Of the objects that orbit the Sun directly, the largest are the eight planets, with the remainder being smaller objects, the dwarf planets and small Solar System bodies.
     <br>
     There are 8 plants in solar system-
