--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <br>
     There are 8 plants in solar system-
     <ul>
-      <li> <a href="Mercury.html"> Mercury</a></li>
-      <li> <a href="Venus.html">Venus</a></li>
-      <li> <a href="Earth.html">Earth</a></li>
-      <li> <a href="Mars.html">Mars</a></li>
-      <li> <a href="Jupiter.html">Jupiter</a></li>
-      <li> <a href="Saturn.html">Saturn</a></li>
-      <li> <a href="Uranus.html">Uranus</a></li>
-      <li> <a href="Neptune.html">Neptune</a></li>
+      <li> <a href="mercury.html"> Mercury</a></li>
+      <li> <a href="venus.html">Venus</a></li>
+      <li> <a href="earth.html">Earth</a></li>
+      <li> <a href="mars.html">Mars</a></li>
+      <li> <a href="jupiter.html">Jupiter</a></li>
+      <li> <a href="saturn.html">Saturn</a></li>
+      <li> <a href="uranus.html">Uranus</a></li>
+      <li> <a href="neptune.html">Neptune</a></li>
     </ul>
   </body>
 </html>
